samples/_failures_safe/1761254495_ff0f4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d46baefa.c:118:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  118 | int transform
      | ^~~
